fixed alignment issue on forms

--- a/public/css/blog_css.css
+++ b/public/css/blog_css.css
@@ -100,18 +100,18 @@ p {
 }
 
 /*--------------form pages-----------------*/
+.form-input label {
+    min-width: 8rem;
+    padding-right: 1rem;
+}
+
 .form-input {
     margin-bottom: 1.2rem;
 }
 
-.login-form > .inline-form {
-    position: absolute;
-    left: 17rem;
-}
-
-.signup-form > .inline-form {
-    position: absolute;
-    left: 22rem;
+.signup-form label {
+    min-width: 14rem;
+    padding-right: 1rem;
 }
 
 
